--- a/23-RepasoCSS/style.css
+++ b/23-RepasoCSS/style.css
@@ -12,6 +12,7 @@ body{
 width: 1100px;
 margin: 0% auto;
 border: 1px solid black;
+overflow: hidden;
 
 }
 
@@ -47,6 +48,51 @@ clear: both;
 
 
 .articulo{
+color: white;
+margin-top: 15px;
+margin-bottom: 15px;
+padding-bottom: 10px;
+border-bottom:1px solid #eee;
 
 
 }
+
+.articulo:first-child{
+    padding-top: 10px;
+    border-top: 1px solid #eee;
+
+}
+
+.articulo h2{
+    font-size: 25px;
+}
+
+#content{
+    float: left;
+    width: calc(80% - 80px);
+    min-height: 500px;
+    background: green;
+    padding: 40px;
+}
+
+aside{
+    float: left;
+    width: calc(20% - 20px);
+    min-height: 500px;
+    background: orange;
+    padding: 10px;
+}
+
+
+
+
+footer {
+    clear: both;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    height: 50px;
+    line-height: 50px;
+  }
