--- a/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
+++ b/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
@@ -1,2 +1,8 @@
+{% extends 'layout.html' %}
+
+{%block title%} Hola mundo {%endblock%}
+
+{% block content %}
 <h1>Hola mundo con Django</h1>
-<h3>Mi nombre es Cristhian Zapata</h3>
+<h3>Haciendo pruebas de contenido</h3>
+{% endblock  %}
