--- a/25-django/AprendiendoDjango/miapp/templates/index.html
+++ b/25-django/AprendiendoDjango/miapp/templates/index.html
@@ -1,2 +1,10 @@
+{% extends 'layout.html' %}
+
+{%block title%} Index {%endblock%}
+
+
+{% block content %}
 <h1>Inicio</h1>
 <p>Years hasta el 2050: </p>
+<p>Esto es una prueba de contenido </p>
+{% endblock  %}
