--- a/25-django/AprendiendoDjango/miapp/templates/pagina.html
+++ b/25-django/AprendiendoDjango/miapp/templates/pagina.html
@@ -1,2 +1,10 @@
+{% extends 'layout.html' %}
+
+{%block title%} Pagina de prueba {%endblock%}
+
+{%block content%}
 <h1>Pagina de mi web </h1>   
-<p>Creado por Cristhian Zapata</p> 
+<p>Creado por Cristhian Zapata</p>
+{%endblock%}
+
+ 
