--- a/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
+++ b/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
@@ -3,6 +3,7 @@
 {%block title%} Hola mundo {%endblock%}
 
 {% block content %}
+{{ block.super }}
 <h1>Hola mundo con Django</h1>
 <h3>Haciendo pruebas de contenido</h3>
 {% endblock  %}
