--- a/25-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/25-django/AprendiendoDjango/miapp/templates/layout.html
@@ -1,48 +1,65 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>
-        {%block title%} 
+        {%block title%}
         <!-- titulo de cada pagina en concreto -->
-        {%endblock %} 
-        
+        {%endblock %}
+
         | Cristhian Zapata
 
     </title>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}" />
 </head>
+
 <body>
-    <h1>Sitio Web con Django / Cristhian Zapata </h1>
-<hr/>
-<ul>
-    <li>
-        <a href="/inicio">Inicio</a>
-    </li>
-    <li>
-        <a href="/hola_mundo">Hola mundo</a>
-    </li>
-     <li>
-        <a href="/pagina-pruebas">Pagina de pruebas</a>
-    </li>
-    
-     <li>
-        <a href="/contacto-2">Contacto</a>
-    </li>
-    
-</ul>
-<hr/>
+    <!-- CABECERA DE LA PAGINA -->
+    <header>
+        <div id="logotipo">
+            <!-- Logo django -->
+            <img src="{% static 'imagenes/logo.png' %}" alt="" />
+            <h1>Sitio Web con Django | Hokage </h1>
+        </div>
+    </header>
 
-<div id="content">
-    {% block content %}
-    <!-- Codigo que viene de templates -->
-    {% endblock  %}
+    <nav>
+        
+        <ul>
+            <li>
+                <a href="/inicio">Inicio</a>
+            </li>
+            <li>
+                <a href="/hola_mundo">Hola mundo</a>
+            </li>
+            <li>
+                <a href="/pagina-pruebas">Pagina de pruebas</a>
+            </li>
 
-</div>
-<hr/>
-<footer>
-    Master en python &copy; Cristhian Zapata
-</footer>
+            <li>
+                <a href="/contacto-2">Contacto</a>
+            </li>
+
+        </ul>
+    </nav>
+
+
+    <div id="content">
+        <h2 class="title">Titulo de prueba</h2>
+        {% block content %}
+        <!-- Codigo que viene de templates -->
+        <strong>Contenido del bloque orignial</strong>
+        {% endblock %}
+    </div>
+   
+    <footer>
+        Master en python &copy; Cristhian Zapata
+    </footer>
 </body>
+
 </html>
