--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -29,7 +29,7 @@ header{
     padding-top: 20px;
 
 }
-
+/* estilos  del logotipo */
 #logotipo img{
 
     display: block;
@@ -59,6 +59,7 @@ nav{
     border: 1px solid #333333;
     box-shadow: 0px 22px 22px gray;
     font-size: 15px;
+    /* margin-bottom: 145px; */
 
 }
 
@@ -84,4 +85,35 @@ nav ul li a:hover{
     box-shadow: 0px 0px 5px #060606 inset;
     color: white;
     transition: all 300ms;
+}
+
+.barra{
+    width: 1250px;
+    margin: 0 auto;
+    margin-bottom: 140px;
+}
+
+.esquina-izquierda{
+    display: block;
+    border-left: 20px solid transparent;
+    border-top: 10px solid #2b2f30 ;
+    float: left;
+
+}
+
+.esquina-derecha{
+    display: block;
+    border-right: 20px solid transparent;
+    border-top: 10px solid #2b2f30 ;
+    float: right;
+
+}
+
+.relleno-barra{
+    display: block;
+    width: 1210px;
+    background: #2b2f30;
+    height: 10px;
+    float: left;
+
 }
