--- a/25-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/25-django/AprendiendoDjango/miapp/templates/layout.html
@@ -47,7 +47,12 @@
 
         </ul>
     </nav>
+<div class="barra">
 
+<span class="esquina-izquierda"></span>    
+<span class="relleno-barra"></span>    
+<span class="esquina-derecha"></span>    
+</div>
 
     <div id="content">
         <h2 class="title">Titulo de prueba</h2>
