--- a/25-django/AprendiendoDjango/miapp/templates/pagina.html
+++ b/25-django/AprendiendoDjango/miapp/templates/pagina.html
@@ -3,7 +3,7 @@
 {%block title%} Pagina de prueba {%endblock%}
 
 {%block content%}
-<h1>Pagina de mi web </h1>   
+<h1 class="title">Pagina de mi web </h1>   
 <p>Creado por Cristhian Zapata</p>
 {%endblock%}
 
