--- a/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
+++ b/25-django/AprendiendoDjango/miapp/templates/hola_mundo.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 {{ block.super }}
-<h1>Hola mundo con Django</h1>
+<h1 class="title">Hola mundo con Django</h1>
 <h3>Haciendo pruebas de contenido</h3>
 {% endblock  %}
