--- a/25-django/AprendiendoDjango/miapp/templates/index.html
+++ b/25-django/AprendiendoDjango/miapp/templates/index.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<h1>Inicio</h1>
+<h1 class="title">Inicio</h1>
 <p>Years hasta el 2050: </p>
 <p>Esto es una prueba de contenido </p>
 {% endblock  %}
