nuevos avances 18 de abril

--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -38,7 +38,10 @@ header{
     margin-top: 20px;
 }
 
-
+p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 #logotipo h1{
     display: block;
     float: left;
