--- a/25-django/AprendiendoDjango/miapp/templates/index.html
+++ b/25-django/AprendiendoDjango/miapp/templates/index.html
@@ -1,10 +1,23 @@
 {% extends 'layout.html' %}
 
-{%block title%} Index {%endblock%}
+{%block title%} {{title}} {%endblock%}
 
 
 {% block content %}
-<h1>Inicio</h1>
+
+
+{% comment %} esto es un comentario en html de django{% endcomment %}
+
+
+<h1 class="title">{{title}}</h1>
+<p>{{mi_variable}}</p>  {% comment %} aca se interpola una variable que es coger una variable que tengo dentro de un metodo y mostrarla en un template {% endcomment %}
+
+{% if nombre and nombre == 'Cristhian Zapata' %} 
+    <p>{{nombre}}</p>
+{% else %}
+    <strong>El nombre no existe o no coincide</strong>
+{% endif %}
+
 <p>Years hasta el 2050: </p>
 <p>Esto es una prueba de contenido </p>
 {% endblock  %}
