--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -38,10 +38,16 @@ header{
     margin-top: 20px;
 }
 
-p{
+p, h2, h3, ul{
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
+ul, ol{
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
 #logotipo h1{
     display: block;
     float: left;
