--- a/25-django/AprendiendoDjango/miapp/templates/index.html
+++ b/25-django/AprendiendoDjango/miapp/templates/index.html
@@ -4,7 +4,6 @@
 
 
 {% block content %}
-<<<<<<< HEAD
 
 
 {% comment %} esto es un comentario en html de django{% endcomment %}
@@ -19,9 +18,22 @@
     <strong>El nombre no existe o no coincide</strong>
 {% endif %}
 
-=======
+
 <h1 class="title">Inicio</h1>
->>>>>>> 2a3cff1d57fce1065ae3f1ae45876074a7d786f2
+ 
+<br>
+<h2>Listado de lenguajes de programacion</h2>
+<ul>
+    {%for lenguaje in lenguajes %}
+     <li>{{forloop.counter}}. {{lenguaje}}  </li>
+
+     {% empty %}
+    <p>No hay lenguajes que mostrar</p>
+     
+     {% endfor %}
+</ul>
+
+
 <p>Years hasta el 2050: </p>
 <p>Esto es una prueba de contenido </p>
 {% endblock  %}
