--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -38,12 +38,12 @@ header{
     margin-top: 20px;
 }
 
-p, h2, h3, ul{
+.box p, .box h2, .box h3, .box ul{
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-ul, ol{
+.box ul, .box ol{
     margin-left: 20px;
     margin-bottom: 10px;
 }
