--- a/25-django/AprendiendoDjango/miapp/templates/index.html
+++ b/25-django/AprendiendoDjango/miapp/templates/index.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+{% include 'fecha-actual.html' with saludo="Hola mundo desde plantilla" %}
 
 {% comment %} esto es un comentario en html de django{% endcomment %}
 
@@ -18,7 +19,7 @@
     <strong>El nombre no existe o no coincide</strong>
 {% endif %}
 
-
+<hr>
 <h1 class="title">Inicio</h1>
  
 <br>
@@ -34,6 +35,9 @@
 </ul>
 
 
-<p>Years hasta el 2050: </p>
+
+
 <p>Esto es una prueba de contenido </p>
+
+
 {% endblock  %}
