nuevos avances mayo

--- a/25-django/AprendiendoDjango/miapp/templates/pagina.html
+++ b/25-django/AprendiendoDjango/miapp/templates/pagina.html
@@ -13,6 +13,9 @@
 <p>{{lista | length}}</p> 
 <p>{{lista | random}}</p> 
 
+{%load filters%}
+{{"Cristhian Zapata"|saludo|safe}}
+
 {%endblock%}
 
  
