--- a/25-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/25-django/AprendiendoDjango/miapp/templates/layout.html
@@ -36,6 +36,9 @@
                 <a href="{% url 'index'%}">Inicio</a>
             </li>
             <li>
+                <a href="{% url 'articulos'%}">Articulos</a>
+            </li>
+            <li>
                 <a href="{% url 'hola_mundo'%}">Hola mundo</a>
             </li>
             <li>
