--- a/25-django/AprendiendoDjango/miapp/templates/articulos.html
+++ b/25-django/AprendiendoDjango/miapp/templates/articulos.html
@@ -9,6 +9,12 @@
             <li>
                 <h4>{{articulo.id}}. {{articulo.title}}</h4>
                 <span>{{articulo.created_at}}</span> 
+                {% if articulo.public %}
+                    <strong>Publicado</strong>
+                {% else %}
+                    <strong>Prublicado</strong>
+
+                {% endif %}
                 <p>
                     {{articulo.content}} <br>
                     <a href="{% url 'borrar_articulo' id=articulo.id %}">Eliminar</a>
