--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -150,6 +150,60 @@ nav ul li a:hover{
     border-radius: 2px;
 }
 
+.box form{
+    width: 40%;
+}
+
+.box form input,
+.box form label{
+    display: block;
+    padding: 5px;
+    padding-left: 0px;
+    
+}
+
+
+.box form input[type="text"],
+.box form textarea{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.box form input[type="text"],
+.box form textarea,
+.box form select{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+
+.box form select{
+    width: 100px;
+    padding: 5px;
+}
+
+
+.box form input[type="submit"],
+.box form input[type="button"],
+.box form button{
+    padding: 10px;
+    margin-top: 10px;
+    background: #2ba977;
+    border: 1px solid black;
+    color: white;
+    transition: 300ms all;
+}
+
+.box form input[type="submit"]:hover,
+.box form input[type="button"]:hover,
+.box form button:hover{
+    cursor: pointer;
+    background: rgb(5, 87, 54);
+    transition: 300ms all;
+}
+
+
+
 .title{
 color: #444;
 letter-spacing: 1px;
