--- a/25-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/25-django/AprendiendoDjango/miapp/templates/layout.html
@@ -47,6 +47,9 @@
             <li>
                 <a href="{% url 'create_article'%}">Crear articulo</a>
             </li>
+            <li>
+                <a href="{% url 'full_article'%}">Crear articulo 2</a>
+            </li>
 {% comment %}             <li>
                 <a href="{% url 'save_articulo'%}">Guardar articulo</a>
             </li> {% endcomment %}
