--- a/25-django/AprendiendoDjango/miapp/static/css/style.css
+++ b/25-django/AprendiendoDjango/miapp/static/css/style.css
@@ -202,8 +202,18 @@ nav ul li a:hover{
     transition: 300ms all;
 }
 
+.rojo{
+    color: red;
+    text-shadow: 0px 0px 1px black;
+}
 
-
+.message{
+padding: 20px;
+background: #2ba977;
+color: #ddd;
+text-align: center;
+margin-bottom: 1rem;
+}
 .title{
 color: #444;
 letter-spacing: 1px;
