--- a/25-django/AprendiendoDjango/miapp/templates/articulos.html
+++ b/25-django/AprendiendoDjango/miapp/templates/articulos.html
@@ -3,7 +3,17 @@
 {%block title%} Listado de articulos {%endblock%}
 
 {%block content%}
-<h1 class="title">Listado de articulos </h1>   
+<h1 class="title">Listado de articulos </h1> 
+
+{% if messages %}
+
+    {%for message in messages %}
+
+        <div class="message"> 
+            {{message}}
+        </div>
+    {% endfor %}
+{% endif %}
     <ul>
         {% for articulo in articulos%}
             <li>
