--- a/25-django/AprendiendoDjango/miapp/templates/create_full_article.html
+++ b/25-django/AprendiendoDjango/miapp/templates/create_full_article.html
@@ -6,6 +6,13 @@
 {% block content %}
     <h1 class="title">Formularios en Django</h1>
 
+    {% if form.errors %}
+        <strong class="rojo">
+            Hay errores en el formulario
+            {{form.errors}}
+        </strong>
+    {% endif %}
+
     <form action="" method="POST">
 
         {% csrf_token %}
