--- a/25-django/AprendiendoDjango/miapp/templates/articulos.html
+++ b/25-django/AprendiendoDjango/miapp/templates/articulos.html
@@ -14,33 +14,36 @@
         </div>
     {% endfor %}
 {% endif %}
-    <ul>
+    
         {% for articulo in articulos%}
-            <li>
+            <article class="article-item">
 
                 {% if articulo.image != 'null' and articulo.image.url|length >= 1 %}
-
-                    <img src="{{articulo.image.url}}" />
-
-                {% endif %}
-
-
-                <h4>{{articulo.id}}. {{articulo.title}}</h4>
-                <span>{{articulo.created_at}}</span> 
-                {% if articulo.public %}
-                    <strong>Publicado</strong>
-                {% else %}
-                    <strong>Prublicado</strong>
+                    <div class="image">
+                        <img src="{{articulo.image.url}}" />
+                    </div>
+                   
 
                 {% endif %}
+
+                <div class="data">
+                <h2>{{articulo.title}}</h2>
+                <span class="date">{{articulo.created_at}}</span> 
+               
                 <p>
-                    {{articulo.content}} <br>
-                    <a href="{% url 'borrar_articulo' id=articulo.id %}">Eliminar</a>
+                    {{articulo.content}} 
+                    <a href="{% url 'borrar_articulo' id=articulo.id %}" class="btn btn-delete">Eliminar</a>
                 </p>
                 
-                <br>
-            </li>
+                </div>
+
+                <div class="clearfix">
+
+                    
+                </div>
+
+            </article>
         {% endfor %}
-    </ul>
+    
         
 {%endblock%}
