--- a/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
+++ b/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
@@ -38,9 +38,12 @@
            <li>
                 <a href="{% url 'index'%}">Inicio</a>
            </li>
+           {% for page in pages%}
            <li>
-            <a href="{% url 'about'%}">Sobre nosotros</a>
+             <a href="{% url 'page' page.2 %}">{{page.1}}</a>
            </li>
+
+           {% endfor %}
 
         </ul>
     </nav>
