--- a/25-django/Proyecto_Django/mainapp/static/css/style.css
+++ b/25-django/Proyecto_Django/mainapp/static/css/style.css
@@ -228,6 +228,19 @@ margin-bottom: 10px;
 margin-top: 5px;
 }
 
+
+.date{
+    display: block;
+  margin-top: 15px; 
+  margin-bottom: 15px; 
+  color: gray;
+}
+
+
+.content{
+  line-height: 25px;  
+}
+
 .article-item{
     margin-bottom: 20px;
     margin-top: 20px;
