--- a/25-django/Proyecto_Django/pages/templates/page/page.html
+++ b/25-django/Proyecto_Django/pages/templates/page/page.html
@@ -4,10 +4,10 @@
 {% block title %} {{page.title}} {% endblock %}
 
 {% block content %}
-    <h1>{{page.title}}</h1>
-    <span>{{page.created_at}}</span>
-    <p>
-        {{page.content}}
+    <h1 class="title">{{page.title}}</h1>
+    <span class="date">{{page.created_at}}</span>
+    <p class="content">
+        {{page.content|safe}}
     </p>
     
 {% endblock %} 
