--- a/25-django/Proyecto_Django/mainapp/static/css/style.css
+++ b/25-django/Proyecto_Django/mainapp/static/css/style.css
@@ -72,29 +72,68 @@ nav{
 
 }
 
-nav ul{
+nav > ul{
     list-style: none;
     text-decoration: none;
 }
 
-nav ul li{
+nav > ul > li{
     line-height: 40px;
     float: left;
 }
 
-nav ul li a{
+nav > ul > li > a{
     display: block;
     padding-left: 15px;
     padding-right: 15px;
     color: white;
 }
 
-nav ul li a:hover{
+nav > ul > li > a:hover{
     background: #2ba977;
     box-shadow: 0px 0px 5px #060606 inset;
     color: white;
     transition: all 300ms;
 }
+
+nav > ul > li> ul{
+    display:  none;
+    position: absolute;
+    color: #f2f2f2;
+    text-align: left;
+    width: 160px;
+    box-shadow: 0px 2px 2px gray;
+}
+
+nav > ul > li:hover > ul{
+    display:block;
+    color: white;
+    margin: 0px;
+    list-style: none;
+}
+
+nav > ul > li:hover > ul > li{
+   background: #aeafaf;
+   border-bottom: 1px solid #d6d6d6;
+   padding: 8px ;
+   line-height: 25px;
+   font-size: 13px;
+   transition: all 300sm;
+}
+
+nav > ul > li:hover > ul > li a{
+   color: #666464;
+   transition: all 300sm;
+ }
+
+ nav > ul > li:hover > ul > li:hover{
+    background-color: #0e5122;
+  }
+
+nav > ul > li:hover > ul > li:hover a{
+   display: block;
+    color: #ffffff;
+  }
 
 .clearfix{
     clear: both;
