--- a/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
+++ b/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
@@ -58,6 +58,9 @@
 
            {% endfor %}
            
+        <li>
+            <a href="{% url 'register'%}">Registro</a>
+        </li>
 
         </ul>
     </nav>
