--- a/25-django/Proyecto_Django/mainapp/templates/users/register.html
+++ b/25-django/Proyecto_Django/mainapp/templates/users/register.html
@@ -5,11 +5,20 @@
 
 {% block content %}
     <h1>{{title}}</h1>
+
+    {{register_form.errors}}
     
     <form action="" method="POST">
         {% csrf_token %}
+    
+        <!-- {{register_form.as_p}} -->
+        <!-- {{register_form.username.label}}
+        {{register_form.username}} -->
 
-        {{register_form.as_p}}
+        {% for field in register_form %}
+            {{field.label}}
+            {{field}}
+        {% endfor %}
         <input type="submit" value="Registrarse"/>
     </form>
 
