--- a/25-django/Proyecto_Django/mainapp/templates/users/register.html
+++ b/25-django/Proyecto_Django/mainapp/templates/users/register.html
@@ -16,7 +16,7 @@
         {{register_form.username}} -->
 
         {% for field in register_form %}
-            {{field.label}}
+           <label for="">{{field.label}}</label> 
             {{field}}
         {% endfor %}
         <input type="submit" value="Registrarse"/>
