--- a/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
+++ b/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
@@ -38,7 +38,7 @@
            <li>
                 <a href="{% url 'index'%}">Inicio</a>
            </li>
-
+           {% if user.email %}
            <li>
             <a href="{% url 'list_articles' %}"> Categoria</a>
 
@@ -57,11 +57,15 @@
            </li>
 
            {% endfor %}
-           
+        {% else %}   
         <li>
             <a href="{% url 'register'%}">Registro</a>
         </li>
 
+        <li>
+            <a href="{% url 'login'%}">Login</a>
+        </li>
+        {% endif %}
         </ul>
     </nav>
 <div class="barra">
