--- a/25-django/Proyecto_Django/mainapp/templates/mainapp/index.html
+++ b/25-django/Proyecto_Django/mainapp/templates/mainapp/index.html
@@ -5,5 +5,23 @@
 
 {% block content %}
     <h1>{{title}}</h1>
+    <hr/>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-succes">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
     
+    {% if user.email %}
+    
+        <h1>Bienvenido, {{request.user.first_name}} {{user.last_name}}</h1>
+        <p>
+            {{user.email}}
+        </p>
+    {% else %}
+        <h2>Identificate para ver mas cosas</h2>
+    {% endif %}
+
 {% endblock %}
