--- a/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
+++ b/25-django/Proyecto_Django/mainapp/templates/layouts/layout.html
@@ -57,6 +57,10 @@
            </li>
 
            {% endfor %}
+           <li>
+            <a href="{% url 'logout'%}">Cerrar sesión</a>
+           </li>
+
         {% else %}   
         <li>
             <a href="{% url 'register'%}">Registro</a>
