--- a/26-Flask/templates/index.html
+++ b/26-Flask/templates/index.html
@@ -8,6 +8,8 @@
 
     <h1>Esta es la página de inicio</h1>
 
+    {% include'includes/edad.html'%}
+    {% include'includes/personas.html'%}
    
     {# comment
      {{ dato1 }}
