--- a/26-Flask/templates/layout.html
+++ b/26-Flask/templates/layout.html
@@ -55,7 +55,7 @@
     </div>
    
     <footer>
-        Master en python &copy; Cristhian Zapata
+        Master en python &copy; Cristhian Zapata - {{now.day}} /{{now.month}} /{{now.year}}
     </footer>
 </body>
 </html>
