nuevos avances flask

--- a/26-Flask/templates/layout.html
+++ b/26-Flask/templates/layout.html
@@ -23,6 +23,14 @@
             <li>
                 <a href="/">Inicio</a>
             </li>
+
+            <li>
+                <a href="{{url_for ('crear_coche')}}">Crear coche</a>
+            </li>
+            
+            <li>
+                <a href="{{url_for ('coches')}}">Listado de coches</a>
+            </li>
             <li>
                 <a href="{{url_for ('info')}}">Informacion</a>
             </li>
