--- a/26-Flask/static/css/style.css
+++ b/26-Flask/static/css/style.css
@@ -358,7 +358,7 @@
    .btn{
        padding: 10px;
        background: rgb(131, 41, 41);
-       color: white;
+       color: white !important;
        border: 1px solid black;
        border-radius: 1rem;
        display: block;
@@ -368,6 +368,10 @@
        
    }
    
+.btn-warning{
+    background: rgb(201, 109, 3);
+}
+
    footer{
        width: 1250px;
        background-color: #1b1e1f;
